--- a/cave/build.xml
+++ b/cave/build.xml
@@ -16,6 +16,7 @@
                 <file name="src/cave.js"/>
                 <file name="src/resource.js"/>
                 <file name="src/scene/title.js"/>
+                <file name="src/scene/game.js"/>
                 <file name="main.js"/>
             </sources>
         </jscomp>
